--- a/templates/index.html
+++ b/templates/index.html
@@ -115,7 +115,7 @@
                         <div class="tab-pane fade show active" id="curry" role="tabpanel" aria-labelledby="curry-tab">
                             {% for recipe, ingredients in recipes.curry.items() %}
                                 <div class="recipe-item" draggable="true" ondragstart="drag(event)" id="{{ recipe }}">
-                                    <img src="{{ url_for('static', filename='images/' + recipe + '.png') }}" alt="{{ recipe }}">
+                                    <img src="{{ url_for('static', filename='images/' + recipe + '.png') | safe }}" alt="{{ recipe }}">
                                     <span>{{ recipe }} ({{ ingredients.values()|sum }})</span>
                                 </div>
                             {% endfor %}
@@ -123,7 +123,7 @@
                         <div class="tab-pane fade" id="salad" role="tabpanel" aria-labelledby="salad-tab">
                             {% for recipe, ingredients in recipes.salad.items() %}
                                 <div class="recipe-item" draggable="true" ondragstart="drag(event)" id="{{ recipe }}">
-                                    <img src="{{ url_for('static', filename='images/' + recipe + '.png') }}" alt="{{ recipe }}">
+                                    <img src="{{ url_for('static', filename='images/' + recipe + '.png') | safe }}" alt="{{ recipe }}">
                                     <span>{{ recipe }} ({{ ingredients.values()|sum }})</span>
                                 </div>
                             {% endfor %}
@@ -131,7 +131,7 @@
                         <div class="tab-pane fade" id="dessert" role="tabpanel" aria-labelledby="dessert-tab">
                             {% for recipe, ingredients in recipes.dessert.items() %}
                                 <div class="recipe-item" draggable="true" ondragstart="drag(event)" id="{{ recipe }}">
-                                    <img src="{{ url_for('static', filename='images/' + recipe + '.png') }}" alt="{{ recipe }}">
+                                    <img src="{{ url_for('static', filename='images/' + recipe + '.png') | safe }}" alt="{{ recipe }}">
                                     <span>{{ recipe }} ({{ ingredients.values()|sum }})</span>
                                 </div>
                             {% endfor %}
